--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <title>meu site1</title>
 </head>
 <body>
-    
+    <section>
+    <h3>Petrick Gomes Soares</h3>
+    <p>Olá! sou Petrick, estudando de engenharia de softare do Centro universitario Santo Agostinho, estou atualmente no terceiro periodo</p>
+    <h3>Habilidades tecnologias:</h3>
+    <ul>
+        <li>Banco de dados</li>
+        <li>Diagramas UML</li>
+        <li>Python</li>
+        <li>Git e Github</li> 
+    </ul>
+    <section>
 </body>
+<section>
+    <h3>Contatos:</h3>
+    <p>E-mail: petrickgomes.the@gmail.com</p>
+    <p>Telefone:(99)985474714<p>
+    <p>Github:<a href="https://github.com/petricksoares"
+     target="_blank">link</a><p>
+</section>
 </html>
