--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>meu site1</title>
 </head>
-<body>
-    <section>
+<body style="font-family: sans-serif; margin:0 ; padding:0;">
+    <section style="background-color:gray;">
     <h3>Petrick Gomes Soares</h3>
-    <p>Olá! sou Petrick, estudando de engenharia de softare do Centro universitario Santo Agostinho, estou atualmente no terceiro periodo</p>
+    <p>Olá! Sou <b style="front-size:20px">Petrick</b>, estudando de engenharia de softare do Centro universitario Santo Agostinho, estou atualmente no terceiro periodo.</p>
     <h3>Habilidades tecnologias:</h3>
     <ul>
         <li>Banco de dados</li>
@@ -16,7 +16,7 @@
         <li>Python</li>
         <li>Git e Github</li> 
     </ul>
-    <section>
+</section>
 </body>
 <section>
     <h3>Contatos:</h3>
